Updated admin/location views

--- a/app/views/admin/locations/edit.html.haml
+++ b/app/views/admin/locations/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing admin_location
+.page-header
+  %h1
+    Kemaskini Lokasi
 
-= render 'form'
-
-= link_to 'Show', @admin_location
-\|
-= link_to 'Back', admin_locations_path
+.row
+  .span12
+    = render 'form'
