--- a/app/views/admin/locations/_form.html.haml
+++ b/app/views/admin/locations/_form.html.haml
@@ -1,16 +1,27 @@
-= form_for [:admin, @location] do |f|
-  -if @location.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@location.errors.count, "error")} prohibited this location from being saved:"
+= form_for [:admin, @location], html: { class: "form-horizontal" } do |f|
+  - if @location.errors[:base].any?
+    .alert.alert-error
+      %button.close{ :"type" => "button", :"data-dismiss" => "alert" }
+        = raw("&times;")
+      %h4 Errors
       %ul
-        - @location.errors.full_messages.each do |msg|
+        - @location.errors[:base].each do |msg|
           %li= msg
 
-  .field
-    = f.label :state_id
-    = f.number_field :state_id
-  .field
-    = f.label :nama
-    = f.text_field :nama
-  .actions
-    = f.submit 'Save'
+  .row
+    = normal_div_if @location.errors[:state_id].empty? do
+      = f.label :state_id, class: "control-label"
+      .controls
+        = f.select :state_id, Location.states.map { |v| [v.nama, v.id] }
+        %span.help-inline
+          = @location.errors[:state_id].join(", ")
+
+    = normal_div_if @location.errors[:nama].empty? do
+      = f.label :nama, class: "control-label"
+      .controls
+        = f.text_field :nama
+        %span.help-inline
+          = @location.errors[:nama].join(", ")
+
+    .form-actions
+      = f.submit 'Save', class: "btn btn-primary"
