--- a/app/views/admin/locations/index.html.haml
+++ b/app/views/admin/locations/index.html.haml
@@ -1,21 +1,33 @@
-%h1 Listing admin_locations
+.page-header
+  %h1.pull-left
+    Senarai Lokasi
+  .page-actions.pull-right
+    = link_to "Lokasi Baru", new_admin_location_path, class: "btn btn-primary"
+  .clearfix
 
-%table
-  %tr
-    %th State
-    %th Nama
-    %th
-    %th
-    %th
-
-  - @locations.each do |location|
-    %tr
-      %td= location.state_id
-      %td= location.nama
-      %td= link_to 'Show', [:admin, location]
-      %td= link_to 'Edit', edit_admin_location_path(location)
-      %td= link_to 'Destroy', [:admin, location], :confirm => 'Are you sure?', :method => :delete
-
-%br
-
-= link_to 'New Location', new_admin_location_path
+.row-fluid
+  .span12
+    - if @locations.length > 0
+      %table.table.table-striped
+        %thead
+          %tr
+            %th #
+            %th Negeri
+            %th Nama
+            %th
+        %tbody
+          - @locations.each_with_index do |location, index|
+            %tr
+              %td= index + 1
+              %td= location.state.nama if location.state
+              %td= location.nama
+              %td.right
+                .btn-group
+                  = link_to [:admin, location], class: "btn btn-small" do
+                    %i.icon-eye-open
+                  = link_to edit_admin_location_path(location), class: "btn btn-small" do
+                    %i.icon-pencil
+                  = link_to [:admin, location], :data => { :confirm => 'Are you sure?' }, :method => :delete, class: "btn btn-small btn-danger" do
+                    %i.icon-trash.icon-white
+    - else
+      Tiada lokasi.
