--- a/app/views/admin/locations/new.html.haml
+++ b/app/views/admin/locations/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New admin_location
+.page-header
+  %h1
+    Lokasi Baru
 
-= render 'form'
-
-= link_to 'Back', admin_locations_path
+.row
+  .span12
+    = render 'form'
