Removed simple_navigation's gem and coded menu manually

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   %body
     .container-narrow
       .masthead
-        = render_navigation renderer: :bootstrap_pills
+        = render 'layouts/menu'
         %h3.muted
           Bertukar
       %hr
