--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -6,54 +6,52 @@
       Kami tahu ramai penjawat awam yang ingin membuat pertukaran tempat kerja secara suka sama suka
       tapi tiada tempat untuk iklankan jawatan anda. Dengan aplikasi ini ianya pasti dapat mencerahkan
       lagi peluang anda.
-    = link_to "Daftar untuk iklan", new_user_registration_path, class: "btn btn-large btn-success"
-    = link_to "Buat carian sekarang", new_user_registration_path, class: "btn btn-large btn"
+    = link_to "Daftar untuk buat iklan", new_user_registration_path, class: "btn btn-large btn-success"
 
-- else
-  .row-fluid
-    .align-center.well
-      #searchbox
-        = search_form_for @q, url: search_index_path, html: { method: :get, class: "form-inline" } do |f|
-          = f.text_field :gred_eq, class: "span1", placeholder: "F41"
-          = f.collection_select :location_id_or_location_state_id_eq, Location.states, :id, :nama, { include_blank: true }
-          = f.submit "Cari", class: "btn btn-primary"
+.row-fluid
+  .align-center.well
+    #searchbox
+      = search_form_for @q, url: search_index_path, html: { method: :get, class: "form-inline" } do |f|
+        = f.text_field :gred_eq, class: "span1", placeholder: "F41"
+        = f.collection_select :location_id_or_location_state_id_eq, Location.states, :id, :nama, { include_blank: true }
+        = f.submit "Buat Carian", class: "btn btn-primary"
 
-  .row-fluid
-    - unless @noresult
-      .span12
-      - if @jobs.length > 0
-        %table.table.table-striped
-          %thead
+.row-fluid
+  - unless @noresult
+    .span12
+    - if @jobs.length > 0
+      %table.table.table-striped
+        %thead
+          %tr
+            %th #
+            %th Lokasi Lama
+            %th Lokasi Dicari
+            %th Gred
+            %th Waktu Iklan
+            %th
+        %tbody
+          - @jobs.each.with_index do |job, index|
             %tr
-              %th #
-              %th Lokasi Lama
-              %th Lokasi Dicari
-              %th Gred
-              %th Waktu Iklan
-              %th
-          %tbody
-            - @jobs.each.with_index do |job, index|
-              %tr
-                %td= index + 1
-                %td
-                  = "#{job.location.nama}, #{job.location.state.nama}"
-                %td
-                  - if job.next_jobs.length == 1
-                    = "#{job.next_jobs[0].location.nama}, #{job.next_jobs[0].location.state.nama}"
-                  - elsif job.next_jobs.length > 1
-                    %ul
-                      - job.next_jobs.each do |next_job|
-                        %li
-                          = "#{next_job.location.nama}, #{next_job.location.state.nama}"
-                  - else
-                    \-
+              %td= index + 1
+              %td
+                = "#{job.location.nama}, #{job.location.state.nama}"
+              %td
+                - if job.next_jobs.length == 1
+                  = "#{job.next_jobs[0].location.nama}, #{job.next_jobs[0].location.state.nama}"
+                - elsif job.next_jobs.length > 1
+                  %ul
+                    - job.next_jobs.each do |next_job|
+                      %li
+                        = "#{next_job.location.nama}, #{next_job.location.state.nama}"
+                - else
+                  \-
 
-                %td= job.gred
-                %td
-                  = time_ago_in_words(job.created_at)
-                  ago
-                %td.right
-                  = link_to search_path(job), class: "btn btn-small" do
-                    %i.icon-eye-open
-      - else
-        Tiada keputusan.
+              %td= job.gred
+              %td
+                = time_ago_in_words(job.created_at)
+                ago
+              %td.right
+                = link_to search_path(job), class: "btn btn-small" do
+                  %i.icon-eye-open
+    - else
+      Tiada keputusan.
