Updated layout to fluid

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -4,7 +4,7 @@
     %small
       Reset semula kata laluan
 
-.row
+.row-fluid
   .span12
     = form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-horizontal" } do |f|
       %fieldset
