--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,7 +4,7 @@
     %small
       Kemaskini akaun anda
 
-.row
+.row-fluid
   .span12
     = form_for resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-horizontal" } do |f|
       %fieldset
