--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -2,7 +2,7 @@
   %h1
     Tukar Kata Laluan
 
-.row
+.row-fluid
   .span12
     = form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "form-horizontal" } do |f|
       %fieldset
