--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
     %small
       Daftar untuk ntuk mengiklan dan mencari info pertukaran kerja
 
-.row
+.row-fluid
   .span12
     = form_for resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" } do |f|
       %fieldset
