More accurate text

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,7 @@
   %h1
     Pendaftaran
     %small
-      Daftar untuk ntuk mengiklan dan mencari info pertukaran kerja
+      Daftar untuk pengiklanan
 
 .row-fluid
   .span12
