--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,9 @@
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    - unless current_user.try(:admin?)
+      = analytics_init if Rails.env.production?
+
   %body
     .container-narrow
       .masthead
