--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -54,6 +54,9 @@
           Hubungi
 
       %p
-        %span.span3
-          E-Mail:
-        = @job.user.email
+        - if current_user
+          %span.span3
+            E-Mail:
+          = @job.user.email
+        - else
+          Sila login atau daftar terlebih dahulu untuk melihat cara untuk menghubungi pengiklan ini.
