--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -2,7 +2,7 @@
   .row-fluid
     .span12
       .page-header
-        %h2
+        %h3
           Penempatan Sekarang
 
       %p
@@ -34,7 +34,7 @@
   .row-fluid
     .span12
       .page-header
-        %h2
+        %h3
           Penempatan yang Dicari
 
       - if @job.next_jobs.length == 1
@@ -50,10 +50,13 @@
   .row-fluid
     .span12
       .page-header
-        %h2
+        %h3
           Hubungi
 
       %p
-        %span.span3
-          E-Mail:
-        = @job.user.email
+        - if current_user
+          %span.span3
+            E-Mail:
+          = @job.user.email
+        - else
+          Sila login atau daftar terlebih dahulu untuk melihat cara untuk menghubungi pengiklan ini.
