--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,6 @@
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
-    - unless current_user.try(:admin?)
-      = analytics_init if Rails.env.production?
 
   %body
     .container-narrow
@@ -18,6 +16,9 @@
       = show_flash(notice, alert)
 
       = yield
+
+      - unless current_user.try(:admin?)
+        = render 'layouts/ga' if Rails.env.production?
 
       %hr
       %footer
