--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -60,3 +60,11 @@
           = @job.user.email
         - else
           Sila login atau daftar terlebih dahulu untuk melihat cara untuk menghubungi pengiklan ini.
+
+  .row-fluid
+    .span12
+      .page-header
+        %h3
+          Komen
+
+      = render 'layouts/fb_comment'
