--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    %meta{:property => 'fb:app_id', :content => '331360483631162'}/
 
   %body
     .container-narrow
