--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -17,8 +17,8 @@
         %thead
           %tr
             %th #
-            %th Lokasi Lama
-            %th Lokasi Dicari
+            %th Sekarang
+            %th Dicari
             %th Gred
             %th Waktu Iklan
             %th
