--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -14,8 +14,8 @@
         %thead
           %tr
             %th #
-            %th Lokasi Lama
-            %th Lokasi Baru
+            %th Sekarang
+            %th Dicari
             %th Gred
             %th Masa Iklan
             %th
