Make website title clickable, remove link Utama

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -66,3 +66,12 @@ td.right {
 .fb-comments, .fb-comments * {
   width:100% !important;
 }
+
+/* Header Link */
+h3 a {
+  color: #000;
+}
+
+h3 a:hover {
+  text-decoration: none;
+}
