Added more Facebook stuff

--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -80,4 +80,7 @@
         %h3
           Komen
 
-      = render 'layouts/fb_comment'
+    = render 'layouts/fb_comment'
+    %p
+      Like untuk menyebarkan tawaran ini!
+      = render 'layouts/fb_like'
