--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -22,6 +22,8 @@
       %a{ href: destroy_user_session_path, :"data-method" => :delete } Logout
   - else
     %li
+      %a{ href: 'https://www.facebook.com/bertukar' } Facebook
+    %li
       %a{ href: new_user_registration_path } Daftar
     %li
       %a{ href: new_user_session_path } Login
