--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -9,36 +9,22 @@
     = form_for resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" } do |f|
       %fieldset
 
-      = normal_div_if resource.errors[:full_name].empty? do
-        = f.label :full_name, "Nama penuh", class: "control-label"
-        .controls
-          = f.text_field :full_name, placeholder: "Muhammad bin Ali"
-          %span.help-inline
-            = resource.errors[:full_name].join(", ")
-
-      = normal_div_if resource.errors[:phone].empty? do
-        = f.label :phone, "No. Telefon", class: "control-label"
-        .controls
-          = f.text_field :phone, class: "span3", placeholder: "0199123456"
-          %span.help-inline
-            = resource.errors[:phone].join(", ")
-
       = normal_div_if resource.errors[:email].empty? do
-        = f.label :email, "E-Mail*", class: "control-label"
+        = f.label :email, "E-Mail", class: "control-label"
         .controls
           = f.email_field :email
           %span.help-inline
             = resource.errors[:email].join(", ")
 
       = normal_div_if resource.errors[:password].empty? do
-        = f.label "Kata laluan*", class: "control-label"
+        = f.label "Kata laluan", class: "control-label"
         .controls
           = f.password_field :password
           %span.help-inline
             = resource.errors[:password].join(", ")
 
       = normal_div_if resource.errors[:password_confirmation].empty? do
-        = f.label "Kata laluan (sekali lagi)*", class: "control-label"
+        = f.label "Kata laluan (sekali lagi)", class: "control-label"
         .controls
           = f.password_field :password_confirmation
           %span.help-inline
