--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -44,7 +44,7 @@
                 = time_ago_in_words(job.created_at)
                 ago
               %td.right
-                = link_to search_path(job), class: "btn btn-small" do
+                = link_to job, class: "btn btn-small" do
                   %i.icon-eye-open
 
       = paginate @jobs
