--- a/app/views/admin/jobs/index.html.haml
+++ b/app/views/admin/jobs/index.html.haml
@@ -17,9 +17,10 @@
             %th Masa Iklan
             %th
         %tbody
+          - i = starting_row_number(params[:page])
           - @jobs.each.with_index do |job, index|
             %tr
-              %td= index + 1
+              %td= i = i + 1
               %td
                 = "#{job.location.nama}, #{job.location.state.nama}"
               %td
