--- a/app/views/admin/locations/index.html.haml
+++ b/app/views/admin/locations/index.html.haml
@@ -16,9 +16,10 @@
             %th Nama
             %th
         %tbody
+          - i = starting_row_number(params[:page])
           - @locations.each_with_index do |location, index|
             %tr
-              %td= index + 1
+              %td= i = i + 1
               %td= location.state.nama if location.state
               %td= location.nama
               %td.right
