--- a/app/views/admin/ministries/index.html.haml
+++ b/app/views/admin/ministries/index.html.haml
@@ -16,9 +16,10 @@
             %th Aktif
             %th
         %tbody
+          - i = starting_row_number(params[:page])
           - @ministries.each_with_index do |ministry, index|
             %tr
-              %td= index + 1
+              %td= i = i + 1
               %td= ministry.nama
               %td= ministry.is_aktif.to_s.upcase
               %td.right
