Show dash if full name/phone number is nil. Closes #38

--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -58,13 +58,13 @@
           %p
             %span.span3
               Nama Penuh:
-            = @job.user.full_name
+            = dash_if_nil(@job.user.full_name)
 
         - if @job.user.phone
           %p
             %span.span3
               No. Telefon:
-            = @job.user.phone
+            = dash_if_nil(@job.user.phone)
 
         %p
           %span.span3
