--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -104,8 +104,8 @@
 
         .row-fluid
           .span12
-            = render 'layouts/fb_comment'
+            = render 'layouts/fb_comment', job: @job
 
         .row-fluid
           .span12
-            = render 'layouts/fb_like'
+            = render 'layouts/fb_like', job: @job
