--- a/app/views/layouts/_fb_comment.html.erb
+++ b/app/views/layouts/_fb_comment.html.erb
@@ -6,4 +6,4 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=331360483631162";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-comments" data-href="<%= "#{request.protocol}#{request.host_with_port}#{request.path}" %>" data-width="100" data-num-posts="4"></div>
+<div class="fb-comments" data-href="http://bertukar.com/jobs/<%= job.id %>" data-width="100" data-num-posts="4"></div>
