--- a/app/views/layouts/_fb_like.html.erb
+++ b/app/views/layouts/_fb_like.html.erb
@@ -6,4 +6,4 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=224169710997013";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-href="<%= "#{request.protocol}#{request.host_with_port}#{request.path}" %>" data-send="true" data-width="450" data-show-faces="false"></div>
+<div class="fb-like" data-href="http://bertukar.com/jobs/<%= job.id %>" data-send="true" data-width="450" data-show-faces="false"></div>
