Shorter & better page title and descriptions

--- a/app/views/jobs/job.html.haml
+++ b/app/views/jobs/job.html.haml
@@ -1,5 +1,5 @@
-- title "#{@job.gred} - #{@job.jawatan}, #{@job.location.nama}, #{@job.location.state.nama}"
-- description "Iklan pertukaran suka sama suka #{@job.gred} #{@job.jawatan}, #{@job.location.nama}, #{@job.location.state.nama}"
+- title "#{@job.gred} - #{@job.jawatan.titleize}, #{@job.location.nama}"
+- description "Pertukaran suka sama suka #{@job.gred} #{@job.jawatan.titleize}, #{@job.location.nama}, #{@job.location.state.nama}"
 .row-fluid
   .span12
     .row-fluid
