Changed menu name, kurangkan kompius

--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,7 +1,7 @@
 %ul.nav.nav-pills.pull-right
   - if current_user
     %li
-      %a{ href: jobs_path } Iklan
+      %a{ href: jobs_path } Iklan Saya
     %li
       %a{ href: edit_user_registration_path } Akaun
     - if current_user.admin?
