--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -52,4 +52,14 @@
 
     - else
       - if @searched
-        Tiada keputusan.
+        Tiada iklan untuk carian ini.
+
+
+.row-fluid.center
+  %p
+    &nbsp;
+  %small
+    %ul.inline
+      - Location.states.all.each do |state|
+        %li
+          = link_to state.nama, search_index_path("q" => { "location_id_or_location_state_id_eq" => state.id})
