--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -62,4 +62,4 @@
     %ul.inline
       - Location.states.all.each do |state|
         %li
-          = link_to state.nama, search_index_path("q" => { "location_id_or_location_state_id_eq" => state.id})
+          = link_to state.nama, search_index_path(location: state.id)
