Faster (~ 9x) and better (?) sitemap

--- a/app/views/sitemap/index.xml.erb
+++ b/app/views/sitemap/index.xml.erb
@@ -6,8 +6,12 @@
       <% if page[:updated_at].present? %>
         <lastmod><%= page[:updated_at] %></lastmod>
       <% end %>
-      <changefreq>daily</changefreq>
-      <priority>0.5</priority>
+      <changefreq>
+        <%= page[:changefreq] || "daily" %>
+      </changefreq>
+      <priority>
+        <%= page[:priority] || "0.5" %>
+      </priority>
     </url>
   <% end %>
 </urlset>
