--- a/app/views/jobs/_list.html.haml
+++ b/app/views/jobs/_list.html.haml
@@ -33,8 +33,7 @@
               = time_ago_in_words(job.created_at)
               ago
             %td.right
-              = link_to job, class: "btn btn-small" do
-                %i.icon-eye-open
+              = link_to "Lihat", job, class: "btn btn-small"
 
     = paginate jobs
 
