Fixed description not being displayed

--- a/app/views/listings/states.html.haml
+++ b/app/views/listings/states.html.haml
@@ -1,5 +1,5 @@
-- title "Negeri #{@state.nama}"
-- description "Pertukaran suka sama suka bagi negeri #{@state.nama}}"
+- title "#{@state.nama}"
+- description "Pertukaran suka sama suka bagi negeri #{@state.nama}"
 .row-fluid
   %h3
     Pertukaran Suka Sama Suka
