--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,8 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
 
-    %meta{name: "description", content: "#{yield :description} "}
+    - unless "#{yield :description}".blank?
+      %meta{name: "description", content: "#{yield :description} "}
 
     - unless current_user.try(:admin?)
       = render 'layouts/ga' if Rails.env.production?
