--- a/app/views/jobs/_location_fields.html.haml
+++ b/app/views/jobs/_location_fields.html.haml
@@ -1,5 +1,5 @@
-= f.collection_select :location_id, Location.states, :id, :nama, { include_blank: true }, { class: "job_state_id", id: "job_state_id" }
-= f.grouped_collection_select :location_id, Location.states, :districts, :nama, :id, :nama, { include_blank: true }, {class: "job_location_id"}
+= f.collection_select :location_id, states, :id, :nama, { include_blank: true }, { class: "job_state_id", id: "job_state_id" }
+= f.grouped_collection_select :location_id, states, :districts, :nama, :id, :nama, { include_blank: true }, {class: "job_location_id"}
 / To select state based on the district
 = hidden_field_tag "state_val", state
 = hidden_field_tag "location_val", location
