Paginate admin's job page

--- a/app/views/admin/jobs/index.html.haml
+++ b/app/views/admin/jobs/index.html.haml
@@ -43,5 +43,8 @@
                     %i.icon-eye-open
                   = link_to [:admin, job], :data => { :confirm => 'Are you sure?' }, :method => :delete, class: "btn btn-small btn-danger" do
                     %i.icon-trash.icon-white
+
+      = paginate @jobs
+
     - else
       Tiada iklan.
