--- a/app/views/layouts/_ga.html.erb
+++ b/app/views/layouts/_ga.html.erb
@@ -10,4 +10,10 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
+<% unless session[:events].nil? %>
+  <% session[:events].each do |event|%>
+     _gaq.push(['_trackEvent', '<%= event[:category]%>', '<%= event[:action]%>', '<%= event[:label]%>', <%= event[:value]%>, false]);
+  <% end %>
+  <% session[:events] = nil %>
+<% end %>
 </script>
