--- a/app/views/layouts/_fb_comment.html.erb
+++ b/app/views/layouts/_fb_comment.html.erb
@@ -1,9 +1,1 @@
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=331360483631162";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-comments" data-href="http://bertukar.com/jobs/<%= job.id %>" data-width="100" data-num-posts="4"></div>
+<div class="fb-comments" data-href="http://bertukar.com/jobs/<%= job.id %>" data-width="100"></div>
