--- a/app/views/layouts/_fb_like.html.erb
+++ b/app/views/layouts/_fb_like.html.erb
@@ -1,9 +1,1 @@
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=224169710997013";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-href="http://bertukar.com/jobs/<%= job.id %>" data-send="true" data-width="450" data-show-faces="false"></div>
+<div class="fb-like" data-href="http://bertukar.com/jobs/<%= job.id %>" data-width="450" data-show-faces="true" data-send="true"></div>
