--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,5 +34,5 @@
       %hr
       %footer
         %p
-          = link_to "IEATBINARY", "http://ieatbinary.com/"
-          © 2012
+          = link_to "Mohd Amree", "http://ieatbinary.com/"
+          © 2013
